# claude-code-work-analysis

./: .gitignore  CLAUDE.md  Cargo.toml  README-MCP.md  README.md
src/: analyzer.rs  filter.rs  main.rs  mcp_server.rs  message_analyzer.rs  models.rs  parser.rs  reporter.rs  scanner.rs
