[package]
name = "claude-work-analysis"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "claude-work-analysis"
path = "src/main.rs"

[[bin]]
name = "mcp-server"
path = "src/mcp_server.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde", "clock"] }
clap = { version = "4.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
walkdir = "2.0"
uuid = { version = "1.0", features = ["serde", "v4"] }
dirs = "5.0"
regex = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"

[dev-dependencies]
tempfile = "3.0"